modified Hello Github in master

--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,7 @@
 		<h4>Hello World! in hotfix</h4>
 		<h1>Hello Security in master</h1>
 		<h1>Hello Gildong in hotfix</h1>
+		<h1>Hello Github in master</h1>
 	</body>
 </html>
 
